Hybrid ABI support for cheri_system syscall stubs.
New _callargs_err and _protoargs_err arguments add an (int *stub_errno)
pointer as the first argument.  This can be used to pass a pointer to
the caller's errno between the proxy functions.  This allows errno updates
to be propigated to the caller.

_protoargs_err now contains __capability annotations so it is typed
correctly in hybrid code.  _callargs now includes explicit casts from
the __capability annotated input variables to unannotated variables to
trigger CToPtr calls against DDC.  In pure-capability mode, this is all
a no-op.

Wrappers for system calls who's argument contain pointers are now
implemented by a SYS_STUB_ARGHASPTRS() macro. In the pure-capability ABI
this is the same as SYS_STUB(). In the hybrid ABI, struction translate
is required so the curren implementations simply return -1 and set errno
to ENOSYS.

Make thr_exit() NOSTUB as it doesn't work in this revision.

--- a/sys/compat/cheriabi/syscalls.master
+++ b/sys/compat/cheriabi/syscalls.master
@@ -876,7 +876,7 @@
 430	AUE_NULL	STD	{ int cheriabi_thr_create( \
 				    _In_ ucontext_t_c *ctx, \
 				    _Out_ long *id, int flags); }
-431	AUE_NULL	NOPROTO	{ void thr_exit(_Out_opt_ long *state); }
+431	AUE_NULL	NOPROTO|NOSTUB	{ void thr_exit(_Out_opt_ long *state); }
 432	AUE_NULL	NOPROTO	{ int thr_self(_Out_ long *id); }
 433	AUE_NULL	NOPROTO	{ int thr_kill(long id, int sig); }
 434	AUE_NULL	UNIMPL	nosys
