--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -3349,19 +3349,21 @@
 			_Out_ void *pzTail
 		);
 	}
-590 AUE_NULL_STD {
+590 AUE_NULL STD {
 		int osdb_step(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
+			int status
+
 		);
 	}
-591 AUE_NULL_STD {
+591 AUE_NULL STD {
 		int osdb_finalize(
 			_In_ void *sqlite3_stmt
 		);
 	}
 
 
-592 AUE_NULL_STD {
+592 AUE_NULL STD {
 		int osdb_column_blob(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3370,7 +3372,7 @@
 		);
 	}
 
-593 AUE_NULL_STD {
+593 AUE_NULL STD {
 		int osdb_column_double(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3379,7 +3381,7 @@
 		);
 	}
 
-594 AUE_NULL_STD {
+594 AUE_NULL STD {
 		int osdb_column_int(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3387,7 +3389,7 @@
 		);
 	}
 
-595 AUE_NULL_STD {
+595 AUE_NULL STD {
 		int osdb_column_int64(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3395,7 +3397,7 @@
 		);
 	}
 
-596 AUE_NULL_STD {
+596 AUE_NULL STD {
 		int osdb_column_text(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3404,7 +3406,7 @@
 		);
 	}
 
-597 AUE_NULL_STD {
+597 AUE_NULL STD {
 		int osdb_column_text16(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3413,7 +3415,7 @@
 		);
 	}
 
-598 AUE_NULL_STD {
+598 AUE_NULL STD {
 		int osdb_column_value(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3422,7 +3424,7 @@
 		);
 	}
 
-599 AUE_NULL_STD {
+599 AUE_NULL STD {
 		int osdb_column_bytes(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3430,7 +3432,7 @@
 		);
 	}
 
-600 AUE_NULL_STD {
+600 AUE_NULL STD {
 		int osdb_column_bytes16(
 			_In_ void *sqlite3_stmt
 			int iCol,
@@ -3438,11 +3440,11 @@
 		);
 	}
 
-601 AUE_NULL_STD {
+601 AUE_NULL STD {
 		int osdb_column_type(
 			_In_ void *sqlite3_stmt
 			int iCol,
-			int size
+			int datatype
 		);
 	}
 
