--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -3365,7 +3365,7 @@
 
 592 AUE_NULL STD {
 		int osdb_column_blob(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			_Out_writes_z(reslen) char *data,
 			int reslen
@@ -3374,7 +3374,7 @@
 
 593 AUE_NULL STD {
 		int osdb_column_double(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			_Out_writes_z(reslen) char *data,
 			double result
@@ -3383,7 +3383,7 @@
 
 594 AUE_NULL STD {
 		int osdb_column_int(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			int result
 		);
@@ -3391,7 +3391,7 @@
 
 595 AUE_NULL STD {
 		int osdb_column_int64(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			long result
 		);
@@ -3399,7 +3399,7 @@
 
 596 AUE_NULL STD {
 		int osdb_column_text(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			_Out_writes_z(reslen) char *data,
 			int reslen
@@ -3408,7 +3408,7 @@
 
 597 AUE_NULL STD {
 		int osdb_column_text16(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			_Out_writes_z(reslen) char *data,
 			int reslen
@@ -3417,7 +3417,7 @@
 
 598 AUE_NULL STD {
 		int osdb_column_value(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			_Out_writes_z(reslen) char *data,
 			int reslen
@@ -3426,7 +3426,7 @@
 
 599 AUE_NULL STD {
 		int osdb_column_bytes(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			int size
 		);
@@ -3434,7 +3434,7 @@
 
 600 AUE_NULL STD {
 		int osdb_column_bytes16(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			int size
 		);
@@ -3442,7 +3442,7 @@
 
 601 AUE_NULL STD {
 		int osdb_column_type(
-			_In_ void *sqlite3_stmt
+			_In_ void *sqlite3_stmt,
 			int iCol,
 			int datatype
 		);
