update syscalls again

--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -3446,5 +3446,18 @@
 			int datatype
 		);
 	}
+602 AUE_NULL STD {
+		int osdb_column_count(
+			_In_ void *sqlite3_stmt,
+			int count	
+		);
+	}
 
-; vim: syntax=off
+603 AUE_NULL STD {
+		int osdb_column_name(
+			_In_ void *sqlite3_stmt,
+			int N,
+			_Out_ void *name
+		);
+	}
+:; vim: syntax=off
