Kernel support for sample collection and snapshot clearing.

--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -3450,4 +3450,13 @@
 			_Out_ void *name
 		);
 	}
+605 AUE_NULL STD {
+		void osdb_sample(
+			int delay,
+			int max
+		);
+	}
+606 AUE_NULL STD {
+		void osdb_snapshot_clear(void);
+	}
 ; vim: syntax=off
