kgssapi: remove the gssd_syscall
Reviewed by:		brooks
Differential Revision:	https://reviews.freebsd.org/D48554

--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -2768,12 +2768,7 @@
 		    int flags
 		);
 	}
-; 505 is initialised by the kgssapi code, if present.
-505	AUE_NULL	NOSTD {
-		int gssd_syscall(
-		    _In_z_ const char *path
-		);
-	}
+505	AUE_NULL	OBSOL	kgssapi
 506	AUE_JAIL_GET	STD {
 		int jail_get(
 		    _In_reads_(iovcnt) _Contains_long_ptr_ struct iovec *iovp,
