makesyscalls: deprecate cpp other than includes
Warn that C preprocessor directives in the config file are deprecated.
They are unsound and support has a number of potential pitfalls.  They
should be replaced by compile-time generation of files plus an overlay
framework to allow things like per-arch variation.

Reviewed by:	kevans
Sponsored by:	DARPA, AFRL
Pull Request:	https://github.com/freebsd/freebsd-src/pull/1575

--- a/sys/kern/syscalls.master
+++ b/sys/kern/syscalls.master
@@ -111,6 +111,7 @@
 ; limited set of output files.  Before the first syscalls, #include lines will
 ; be copied and %%ABI_HEADERS%% expanded.  Between system call entries,
 ; all lines beginning with # will be copied.  Caveat Emptor.
+; WARNING: this functionality is deprecated.
 
 #include <sys/param.h>
 #include <sys/sysent.h>
